# line_follower_ws

./: .env  LICENSE.md  README.md
Alpha_description/: CMakeLists.txt  package.xml
Alpha_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
Alpha_description/urdf/: Alpha.gazebo  Alpha.trans  Alpha.xacro  materials.xacro
alpha_description/: CMakeLists.txt  package.xml
alpha_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
alpha_description/meshes/: wheel_1_1.stl  wheel_2_1.stl
alpha_description/urdf/: Alpha.gazebo  Alpha.trans  Alpha.xacro  materials.xacro
alphabot_description/: package.xml  setup.cfg  setup.py
alphabot_description/launch/: display.launch.py  gazebo.launch.py
alphabot_description/meshes/: base_link.stl  depth_camera_1.stl  wheel_4_1.stl  wheel_clamp_1_1.stl  wheel_clamp_4_1.stl
alphabot_description/urdf/: alphabot.gazebo  alphabot.trans  alphabot.xacro  materials.xacro
atom_bringup/: CMakeLists.txt
atom_description/meshes/: wheel_1_1.stl  wheel_3_1.stl  wheel_4_1.stl
atom_description/urdf/: atom.gazebo  atom.trans  atom.xacro  materials.xacro
src/atom_bringup/: package.xml
src/atom_controller/: package.xml  setup.cfg  setup.py
src/atom_description/: package.xml  setup.py
src/atom_models/: CMakeLists.txt  package.xml
src/atom_worlds/: CMakeLists.txt  package.xml
src/line_follower_bringup/: CMakeLists.txt  (+1 more)
src/line_follower_worlds/: CMakeLists.txt  package.xml
src/line_follower_worlds/worlds/: empty_world.world  line_follower.world
(+82 files in other folders)
